Adjust gap in navigation container and ensure links do not wrap

--- a/css/style.css
+++ b/css/style.css
@@ -68,11 +68,15 @@ header .container {
     justify-content: center;
     align-items: center;
     flex-direction: row;
-    gap: 25px;
+    gap: 20px;
     margin-top: 20px;
     text-decoration: none;
     list-style: none;
     font-size: 18px;
+}
+
+#nav-container a {
+    white-space: nowrap;
 }
 
 #sobre {
